site/static/css/home.css
html {
  font-size: 21px;
}

header .contents,
footer .contents,
main .contents {
  width: 50rem;
}

.main-text {
  max-width: 45vw;
}

main {
  margin-top: 0;
}

h1 {
  font-weight: 400;
  font-size: 2rem;
  line-height: 1.25em;
}

p {
  line-height: 1.5em;
  color: #768096;
}

#signup-email {
  vertical-align: baseline;
  background-color: transparent;
  padding: 12px 0;
  font-size: 1rem;
  width: 15em;
  border: solid #bfc4d0;
  border-width: 0 0 1px;
  color: #768096;
  max-width: 80vw;
  /* When transitioning to the "visible" state: */
  transition:
      opacity 300ms,
      visibility 300ms step-start;
}

#signup-email:-webkit-autofill {
  /* Hack to make background white when text field is autofilled */
  -webkit-box-shadow: 0 0 0 3rem white inset;
}

#signup-email:focus {
  outline: none;
}

#signup-email::placeholder {
  color: #b5bccc;
}

.field {
  position: relative;
  margin-bottom: 0.66em;
}

#signup-button,
#signup-success {
  position: absolute;
  top: 0;
  background-color: #f1516c;
  border: none;
  border-radius: 1.5rem;
  box-shadow: 0 0.66rem 1.15rem #f8dbe2;
  font-size: 0.833rem;
  font-weight: 500;
  color: #ffffff;
  box-sizing: border-box;
  padding: 0 2em;
  margin: 20px 0;
  height: 2.75rem;
  display: flex;
  justify-content: center;
  align-child: center;
  width: 10rem;
}

#signup-button:focus {
  outline: none;
  background-color: #e1415c;
}

#signup-button:active {
  box-shadow: 0 0.125rem 1rem #f8dbe2;
}

#signup-button {
  visibility: visible;
  opacity: 1;
  /* When transitioning to the "normal" state: */
  transition:
      box-shadow 300ms,
      opacity 300ms,
      visibility 300ms step-start;
}

#signup-success {
  background-color: #2979e9;
  box-shadow: 0 0.66rem 1.15rem #cadef9;
  opacity: 0;
  visibility: hidden;
  /* When transitioning to the "normal" state: */
  transition:
      opacity 300ms,
      visibility 300ms step-end;
}

.field {
  transition:
      transform 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
}

.success #button-field {
  transform: translateY(-3rem);
}

.success #signup-button {
  opacity: 0;
  visibility: hidden;
  /* When transitioning to the "success" state: */
  transition:
      opacity 300ms,
      visibility 300ms step-end;
}

.success #signup-success {
  opacity: 1;
  visibility: visible;
  /* When transitioning to the "success" state: */
  transition:
      opacity 300ms,
      visibility 300ms step-start;
}

.success #signup-email {
  opacity: 0;
  visibility: hidden;
  /* When transitioning to the "success" state: */
  transition:
      opacity 300ms,
      visibility 300ms step-end;
}

#signup-email ~ .focus-border {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 0;
  height: 2px;
  background-color: #f1516c;
  transition: 300ms;
}

#signup-email:focus ~ .focus-border {
  width: 15rem;
}

